<resources>
    <string name="app_name">Mr. Potato</string>
    <string name="hat">Hat</string>
    <string name="eyes">Eyes</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="glasses">Glasses</string>
    <string name="nose">Nose</string>
    <string name="mustache">Mustache</string>
    <string name="ears">Ears</string>
    <string name="arms">Arms</string>
    <string name="shoes">Shoes</string>
    <string name="mouth">Mouth</string>
</resources>